# truth-guard

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  app.json  deta.json  docker-compose.yml  heroku.Dockerfile  pyproject.toml
app/: __init__.py  config.py  main.py
app/models/: __init__.py  router.py  schemas.py
notebook/: fake-news-analysis.ipynb  model.pkl
